<resources>
    <string name="app_name">PortoCashier</string>
    <string name="nama1">Add New Note</string>
    <string name="nama2">Add New Note</string>
    <string name="name4">No Data</string>
    <string name="nama5">User</string>
    <string name="nama7">Loading</string>
    <string name="add">Add New Note</string>
    <string name="hpro">Harga Produk</string>
    <string name="ppro">Pembayaran</string>
    <string name="tharga">Total Harga</string>
    <string name="jpro">Jumlah Produk</string>
    <string name="tpenjualan">Total Penjualan</string>
    <string name="string6">Penjualan Produk</string>
    <string name="online">ketik gofood / grabfood</string>
    <string name="online2">ketik gofood / grabfood</string>
</resources>
